kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-final-service
  namespace: production
spec:
  type: LoadBalancer
  selector:
    app: nodejs-web
  ports:
    - protocol: TCP
      port: 80           # Port mở ra Internet
      targetPort: 3000   # Trỏ vào port 3000 của container ứng dụng
