kubernetes/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-final-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.moteo.fun
    secretName: moteo-tls-secret
  rules:
  - host: www.moteo.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-final-service
            port:
              number: 80
